--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [ main, master ]
+    branches: [main, master]
 
 jobs:
   flake-check:
@@ -21,12 +21,12 @@ jobs:
       - name: Magic Nix Cache
         uses: DeterminateSystems/magic-nix-cache-action@v7
 
-      - name: Cachix (optional)
-        if: ${{ vars.CACHIX_CACHE_NAME != '' && secrets.CACHIX_AUTH_TOKEN != '' }}
-        uses: cachix/cachix-action@v14
-        with:
-          name: ${{ vars.CACHIX_CACHE_NAME }}
-          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      #      - name: Cachix (optional)
+      #        if: ${{ vars.CACHIX_CACHE_NAME != '' && secrets.CACHIX_AUTH_TOKEN != '' }}
+      #        uses: cachix/cachix-action@v14
+      #        with:
+      #          name: ${{ vars.CACHIX_CACHE_NAME }}
+      #          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
       - name: nix flake check
         run: nix flake check --print-build-logs --show-trace
