--- a/.github/workflows/nix.yml
+++ b/.github/workflows/nix.yml
@@ -28,5 +28,5 @@ jobs:
       #          name: ${{ vars.CACHIX_CACHE_NAME }}
       #          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
 
-      - name: nix flake check
-        run: nix flake check --print-build-logs --show-trace
+      - name: nix flake check (linux all-systems)
+        run: nix flake check --all-systems --print-build-logs --show-trace
