--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -28,3 +28,6 @@ bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compo
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, SPACE
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+
+# System: logout/power menu
+bindd = SUPER SHIFT, E, Power menu, exec, wlogout -p layer-shell
